fixed the navbar collapse size by changing the line in bootstrap css to: @media (min-width: 500px) {

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -4441,7 +4441,7 @@ input[type="button"].btn-block {
   }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 999px) {
   .navbar-expand-lg > .container,
   .navbar-expand-lg > .container-fluid {
     padding-right: 0;
@@ -4449,7 +4449,7 @@ input[type="button"].btn-block {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 500px) {
   .navbar-expand-lg {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
